--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -105,7 +105,7 @@ android {
     buildToolsVersion '27.0.3'
 
     defaultConfig {
-        applicationId "com.windguos.h8.vc.wangming"
+        applicationId "com.windguos.huahua"
         minSdkVersion 19
         targetSdkVersion 26
         versionCode 1
